k8s-examples/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: codihuston/gairos-client
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.2"
            limits:
              memory: "512Mi"
              cpu: "0.2"
          ports:
            - containerPort: 3000
