k8s-examples/sql-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: sql-deployment
  ports:
  - port: 5432
    targetPort: 5432
